@@ -486,13 +486,18 @@ if (! is_object ( $icmsUser ) || ! is_object ( $icmsModule ) || ! $icmsUser->isA
 		$form->addElement ( new XoopsFormHidden ( 'op', 'save' ) );
 		$form->addElement ( new XoopsFormButton ( '', 'button', _GO, 'submit' ) );
 		xoops_cp_header ();
+		if ($module->getInfo('hasAdmin') == true) {
+			$modlink = '<a href="'.ICMS_URL.'/modules/'.$module->getVar('dirname').'/'.$module->getInfo('adminindex').'">'.$modname.'</a>';
+		} else {
+			$modlink = $modname;
+		}
 		$iconbig = $module->getInfo('iconbig');
 		if ( isset( $iconbig ) && $iconbig == false ) {
-			echo '<div class="CPbigTitle" style="background-image: url('.ICMS_URL.'/modules/system/admin/preferences/images/preferences_big.png);">'.$modname.' &raquo; '._PREFERENCES.'</div>';
+			echo '<div class="CPbigTitle" style="background-image: url('.ICMS_URL.'/modules/system/admin/preferences/images/preferences_big.png);">'.$modlink.' &raquo; '._PREFERENCES.'</div>';
 
 		}
 		if ( isset( $iconbig ) && $iconbig == true ) {
-			echo '<div class="CPbigTitle" style="background-image: url('.ICMS_URL.'/modules/'.$module->getVar('dirname').'/'.$iconbig.')">'.$modname.' &raquo; '._PREFERENCES.'</div>';
+			echo '<div class="CPbigTitle" style="background-image: url('.ICMS_URL.'/modules/'.$module->getVar('dirname').'/'.$iconbig.')">'.$modlink.' &raquo; '._PREFERENCES.'</div>';
 		}
 		$form->display ();
 		xoops_cp_footer ();
