@@ -38,6 +38,7 @@ Revision:
 * #698: we are now using the default system editor to edit the content for blocks (Phoenyx)
 * #570: changed th font color in impresstheme and impresstheme_light from white to black to make it readable (Phoenyx)
 * #576: templates will no longer be checked for modifications by default for performance reasons (Phoenyx)
+* #705: Module name in module preferences breadcrumb is linked to module administration now (Phoenyx)
 
 '''Fixed'''
 * fixed class/icmsform/icmsform.php 723-728 lines (????) (mekdrop)
